--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,20 @@
 <div class="container">
 
-  <div class="row">
-    <div class="col">
-      <h1>Welcome {{title}}</h1>
+  <!--navBar-->
+  <div class="row" id="myRow">
+    <div class="col" id="myCol">
+      <app-my-nav-bar></app-my-nav-bar>
     </div>
   </div>
 
+  <!--Content-->
   <div class="row" id="myRow">
 
-    <div class="col-md-2" id="myCol">
+    <div class="col" id="myCol">
       <app-card></app-card>
     </div>
 
-    <div class="col-md-8" id="myCol"></div>
+    <div class="col-8" id="myCol"></div>
 
     <div class="col" id="myCol">
       <router-outlet></router-outlet>
@@ -20,8 +22,11 @@
 
   </div>
 
+  <!--navBar-->
+  <div class="row" id="myRow">
+    <div class="col" id="myCol">
+      <app-my-footer></app-my-footer>
+    </div>
+  </div>
+
 </div>
-
-
-
-
